<?xml version="1.0"?>
<package format="2">
  <name>psen_scan</name>
  <version>1.0.4</version>
  <description>The psen_scan package for Pilz laser scanner</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.doehn@pilz.de">Christian Döhn</maintainer>
  <maintainer email="g.sansone@pilz.de">Giuseppe Sansone</maintainer>
  <maintainer email="s.heinisch@pilz.de">Sascha Heinisch</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <test_depend>code_coverage</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
